# PyMT5

./: .gitignore  404.html  PyMT5.py  PyMT5.pyproj  README.md  index.html  main.py  mkdocs.yml  objects.inv  settings.json  sitemap.xml
api/: index.html
app/: __init__.py
docs/: api.md  index.md
examples/: PyMT5.pyproj  __init__.py  __main__.py  account_info.py  cli.py  list_account_methods.py  main.py  market_book.py  mt5_account_ex.py  opened_snapshot.py  orders_history.py  positions_history.py  quick_start_connect.py  quickstart.py  streaming_position_profit.py  streaming_positions_tickets.py  streaming_trade_events.py  streaming_trade_tx.py  symbols_market.py  trading_basics.py  trading_safe.py
ext/: setup.py
javascripts/: ux.js
package/: mt5_term_api.pyproj  mt5_term_api.sln  pyproject.toml
package/MetaRpcMT5/: __init__.py  mt5_account.py  mt5_term_api_account_helper_pb2.py  mt5_term_api_account_helper_pb2_grpc.py  mt5_term_api_admin_pb2.py  mt5_term_api_admin_pb2_grpc.py  mt5_term_api_connection_pb2.py  mt5_term_api_connection_pb2_grpc.py  mt5_term_api_demo_account_pb2.py  mt5_term_api_demo_account_pb2_grpc.py  mt5_term_api_gui_pb2.py  mt5_term_api_gui_pb2_grpc.py  mt5_term_api_health_check_pb2.py  mt5_term_api_market_info_pb2.py  mt5_term_api_market_info_pb2_grpc.py  mt5_term_api_subscriptions_pb2.py  mt5_term_api_subscriptions_pb2_grpc.py  mt5_term_api_vnc_pb2.py  mt5_term_api_vnc_pb2_grpc.py
package/MetaRpcMT5/helpers/: __init__.py  errors.py  mt5_account.py
package/helpers/: __init__.py
package/tests/: test.py
search/: search_index.json
(+478 files in other folders)
