[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaRpcMT5"
version = "1.0.138"
description = "MetaRPC MT5 gRPC Python client"
authors = [{ name = "MetaRPC", email = "admin@mrpc.pro" }]
requires-python = ">=3.8"

# dependencies (installed automatically with your package)
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "googleapis-common-protos>=1.56.0"
]

[tool.setuptools]
packages = ["MetaRpcMT5", "MetaRpcMT5.helpers"]
include-package-data = true